# pico-shared

./: .gitignore  CMakeLists.txt  LICENSE  README.md  anim.c  anim.h  app_settings_t.h  frtos.c  frtos.h  memmap_storage.ld.in  pico_sdk_import.cmake  shared_config.example.h  shared_config.h  str.c  str.h  utils.c  utils.h
shared_modules/cpu_cores/: cpu_cores.c  cpu_cores.h
shared_modules/mcp/: mcp.c  mcp.h  shared_config.h
shared_modules/memory/: memory.c  memory.h
shared_modules/mp3/: horn_mp3.h  mp3.c  mp3.h  shared_config.h
shared_modules/storage/: shared_config.h  storage.c  storage.h
shared_modules/v_monitor/: shared_config.h  v_monitor.c  v_monitor.h
shared_modules/wsleds/: pio_wsleds.pio  shared_config.h  wsleds.c  wsleds.h  wsleds_data.h
shared_modules/wsledswhite/: pio_wsledswhite.pio  wsledswhite.c  wsledswhite.h  wsledswhite_data.h
src/: CMakeLists.txt  shared_config.h  utils.c  utils.h
src/shared_modules/mcp/: mcp.c
